Judge/Temporary_Error/261.log
./temp/261/code.cpp:1:10: error: #include expects "FILENAME" or <FILENAME>
./temp/261/code.cpp: In function 'int main()':
./temp/261/code.cpp:5:23: error: 'scanf' was not declared in this scope
     scanf("%d%d",&a,&b);
                       ^
./temp/261/code.cpp:6:20: error: 'printf' was not declared in this scope
     printf("%d",a+b);
                    ^
